compiler/kernc_cli/tests/soundness/reject/closures/escaping_capturing_closure_as_fn_pointer.rn
// class: escaping-stack-state
// source: analogous to Rust closure/fndef return-type soundness bugs such as rust-lang/rust#84366
// stderr: cannot return a capturing closure as `*Fn(i32) i32`
// stderr: closure environment would escape the current stack frame

fn make() *Fn(i32) i32 {
    let base = i32.{7};
    return .[base](x: i32) i32 {
        return x + base;
    };
}

fn main() i32 {
    let f = make();
    return f(5);
}
